<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_about_you"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_height="120dp"
            android:padding="16dp"
            android:hint="@string/about_you"/>

        <TextView
            android:id="@+id/tv_selectServiceType"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/select_service_type"/>
        <LinearLayout
            android:id="@+id/ll_serviceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:orientation="vertical">

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/checkboxlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/cb_term_n_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/terms_condition_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/cb_term_n_condition"
                android:clickable="true"
                android:text="@string/accept_t_and_s" />

            <TextView
                android:id="@+id/tv_terms_n_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cb_term_n_condition"
                android:layout_toRightOf="@+id/cb_term_n_condition"
                android:text="@string/terms_n_condition" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_register"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/alreadyhaevanaccount"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:clickable="true"
                android:paddingTop="10dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>