<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_serviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_service_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="text"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="$"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_servicePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="0"
                android:inputType="text"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginTop="16dp"
        android:text="@string/text_service_charge"/>

    <Button
        android:id="@+id/btn_Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_submit"
        android:textColor="@android:color/white" />
</LinearLayout>